--- a/build.config
+++ b/build.config
@@ -146,6 +146,9 @@ CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 ### Include SMB and WINS server. ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_SMBD=y
 
+### Add support SMB2
+CONFIG_FIRMWARE_INCLUDE_SMBD36=y
+
 ### Include WINS server only. ~0.4MB
 #CONFIG_FIRMWARE_INCLUDE_WINS=y
 
@@ -181,7 +184,7 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
+CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include StrongSwan. XFRM modules ~0.2MB, strongswan ~0.7MB
 #CONFIG_FIRMWARE_INCLUDE_SSWAN=y
@@ -202,10 +205,10 @@ CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
-CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
+#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
 ### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
-CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
+#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
 #CONFIG_FIRMWARE_INCLUDE_ARIA=y
@@ -260,6 +263,7 @@ CONFIG_FIRMWARE_INCLUDE_CURL=y
 
 ### Include iPerf3 support ~0.13MB
 #CONFIG_FIRMWARE_INCLUDE_IPERF3=y
+
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
 CONFIG_NETFILTER_NETLINK_QUEUE=m
 CONFIG_IP_NF_QUEUE=m
