--- a/build.config
+++ b/build.config
@@ -267,3 +267,4 @@ CONFIG_FIRMWARE_INCLUDE_CURL=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
 CONFIG_NETFILTER_NETLINK_QUEUE=m
 CONFIG_IP_NF_QUEUE=m
+CONFIG_NETFILTER_XT_MATCH_MULTIPORT=m
